tests/ui/pattern/usefulness/match-vec-fixed.stderr
error: unreachable pattern
  --> $DIR/match-vec-fixed.rs:7:9
   |
LL |         [_, _, _] => {}
   |         --------- matches all the relevant values
LL |         [_, _, _] => {}
   |         ^^^^^^^^^ no value can reach this
   |
note: the lint level is defined here
  --> $DIR/match-vec-fixed.rs:1:9
   |
LL | #![deny(unreachable_patterns)]
   |         ^^^^^^^^^^^^^^^^^^^^

error: unreachable pattern
  --> $DIR/match-vec-fixed.rs:11:9
   |
LL |         [_, 1, _] => {}
   |         --------- matches all the relevant values
LL |         [_, 1, _] => {}
   |         ^^^^^^^^^ no value can reach this

error: aborting due to 2 previous errors

